# NSF_IRES_2025_Codebase

./: .gitignore  README.md
control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
control/log/: latest_build
control/src/traj_planning/: package.xml  setup.cfg  setup.py
control/src/traj_planning/launch/: carla_ros.launch.py
control/src/traj_planning/traj_planning/: constants.py  local_planner.py  traj_selecter.py  traj_server.py
control/src/traj_planning_msg/: CMakeLists.txt  package.xml
control/src/traj_planning_msg/msg/: Trajectory.msg
f1tenth_experimental_ws/src/local_planner/: package.xml  setup.py
f1tenth_experimental_ws/src/local_planner/config/: ego_config.yaml  opp_config.yaml
f1tenth_experimental_ws/src/local_planner/launch/: local_planner_launch.py  multicar_launch.py
f1tenth_experimental_ws/src/local_planner/local_planner/: constants.py  cost_adjust_cvx.py  cost_utils.py  pause.py  traj_selecter.py  traj_server.py  visualizer.py
f1tenth_experimental_ws/src/local_planner_msgs/: CMakeLists.txt
f1tenth_experimental_ws/src/pure_pursuit/: CMakeLists.txt
f1tenth_experimental_ws/src/pure_pursuit/config/: config.yaml  sim_config.yaml  sim_config_ego.yaml  sim_config_opp.yaml
f1tenth_experimental_ws/src/pure_pursuit/racelines/: way.csv  (+14 more)
f1tenth_storage/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
f1tenth_storage/log/: latest_build
f1tenth_storage/src/local_planner/: setup.py
f1tenth_storage/src/local_planner_msgs/: package.xml
f1tenth_storage/src/pure_pursuit/: CMakeLists.txt  package.xml
(+400 files in other folders)
